fix: get_availability now consults the caller before reading a calendar EXO-89841
get_availability took arbitrary usernames, resolved each identity and computed
busy time from it. The caller's identity was never referenced anywhere in the
method, so any authenticated user could name any other username and receive
their busy and free blocks.

The platform guard that should have stopped this was defeated twice over.
getBusyIntervals built an EventFilter with ownerIds = null and attendeeId = the
target, then called getEvents(filter, TIMEZONE, identityId) passing the TARGET
as the acting user. In AgendaEventServiceImpl.getEvents the canAccessCalendar
check runs only when ownerIds != null, so it never fired; and the acting-user
comparison compared the target with itself.

The rule enforced now is not a new one: a user may read availability only for a
calendar owner Utils.canAccessCalendar already lets them read, which for a
personal calendar is its owner and no one else. In practice a user may ask
about their own availability only. Whether, and to whom, free/busy should be
shareable is a separate product decision that is still open; this restores the
guard that exists rather than inventing a sharing policy.

The ~120 lines of scheduling logic move out of the MCP tool into a new
AgendaAvailabilityService in agenda-services, which takes the CALLER's identity
as a parameter and holds the single gate, so a future REST surface and MCP
cannot diverge. The tool is left as glue. The service also passes the caller,
not the target, as the acting user to getEvents, which turns that service's own
attendee check into a real second gate instead of a tautology.

Behaviour change, and it is the point: an agent asking about a colleague it may
not read is now refused where today it receives data. suggest_meeting_time
refuses outright rather than proposing slots computed from a subset of the
attendees. Conflict reporting on create/update/date-poll degrades instead of
refusing - it is an en